# TICL-TDL

./: README.md  pyproject.toml
scripts/: CONFIG.py
scripts/ccnn/: analyse_laplacian_building.py  dummy_component_linker.py  run_optimal_transport.py  train_component_linker.py  train_rewire_component_classifier.py
scripts/gnn/datasetCreation/: compareGNNDatasets.py  createClusterDataset.py  createGNNDataset.py
scripts/gnn/datasets/: compare_gnn_datasets.py  create_gnn_dataset.py
scripts/gnn/dummyDataGeneration/: dataStatistics.py
scripts/gnn/globalMetrics/: metricsCreation.py  metricsPlotting.py
scripts/gnn/metrics/: create_metrics.py  plot_metrics.py
scripts/gnn/stabilityAnalysis/: edgeStability.py  plotPerturbations.py  stabilityAnalysis.py  stabilityPlotting.py
ticllearning/GNN/: TrackLinkingNet.py  attention_net.py  edge_conv_block.py  encoder.py  linking_net.py  loss_function.py  train.py
ticllearning/cclinking/: cell_rewire_classifier.py  component_classifier.py  connection_attention.py  hasse_message_passing.py  k_missing_rewirer.py  train.py
ticllearning/datasets/: ClusterDataset.py  ClusterDatasetBuilder.py  DummyDataset.py  GNNDataset.py  lang.py
ticllearning/gnn/: linking_net.py  loss_function.py  train.py
ticllearning/multiGNN/: PUNet.py
ticllearning/transformer/: EventGrouping.py  LossFunction.py  Transformer.py  train.py
ticllearning/utils/: dataStatistics.py  data_statistics.py  data_utils.py  graphHeatMap.py  graphMetric.py  graphUtils.py  graph_heatmap.py  graph_metric.py  graph_utils.py  plotResults.py  plot_results.py
(+24 files in other folders)
