[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticl-learning"
version = "0.1.0"
description = "A package for training ML models on TICL data"
authors = [
  { name = "Christine Zeh", email = "christine.zeh@cern.ch" }
]
dependencies = [
  # Add runtime dependencies here, e.g.:
  # "requests>=2.25.1"
]

